fixed mobile view and text wrapping

--- a/src/components/ApplicationConfirmation/ApplicationConfirmationPage.css
+++ b/src/components/ApplicationConfirmation/ApplicationConfirmationPage.css
@@ -15,7 +15,7 @@
   padding-bottom: 0%;
   text-align: center;
   padding-top: 10%;
-  background-color: #ffffff; 
+  /* background-color: #ffffff;  */
   border-radius: 10px; 
   padding: 20px;
   width:100%; 
@@ -25,16 +25,24 @@
 .application-summary-table {
   margin-top: 2rem;
   width: 100%;
-  border-collapse: collapse;
+  table-layout: fixed;
+  /* border-collapse: collapse; */
 }
+
+
 
 
 .application-summary-table td {
   padding: 1rem 2rem;
   border-bottom: 1px solid #e9e9e9;
+  max-width: 40%;
   text-align: left;
   font-size: medium;
+  white-space: unset;
+  word-wrap: break-word;
 }
+
+span { word-wrap: break-word; }
 
 .application-summary-table th {
   padding: 1rem 2rem;
